--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -17,7 +17,7 @@
       </p>
     </div>
   </div>
-  <div>
+  <!--div>
     <h2>Congrats! You've configured and run the sample application.</h2>
     <p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>
     <p>This sample application tracks users and articles.</p>
@@ -40,7 +40,7 @@
         Have fun...
       </li>
     </ul>
-  </div>
+  </div-->
   <div class="row">
     <div class="col-md-3">
       <h2><strong>M</strong>ongoDB</h2>
