--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,6 +1,6 @@
 <section>
   <div class="jumbotron text-center">
-    <div class="row">
+    <!--div class="row">
       <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
         <img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/client/img/brand/logo.png" />
       </div>
@@ -8,14 +8,17 @@
     <br>
     <div class="row">
       <p class="lead">
-        Open-Source Full-Stack Solution For MEAN Applications
+       this home page
       </p>
     </div>
     <div class="row">
       <p>
-        <a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>
+        <!--a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>
       </p>
-    </div>
+    </div-->
+    <p class="lead">
+       this home page
+    </p>
   </div>
   <!--div>
     <h2>Congrats! You've configured and run the sample application.</h2>
@@ -41,7 +44,7 @@
       </li>
     </ul>
   </div-->
-  <div class="row">
+  <!---div class="row">
     <div class="col-md-3">
       <h2><strong>M</strong>ongoDB</h2>
       <p><a target="_blank" href="http://mongodb.org/">MongoDB</a> is a NoSQL database. MongoDB's <a target="_blank" href="http://docs.mongodb.org/manual/">great manual</a> is the place to get started with NoSQL and MongoDB.</p>
@@ -67,7 +70,7 @@
         <li><a target="_blank" href="http://meanjs.org/docs.html">MEAN.JS Documentation</a>
         </li>
         <!-- <li><a target="_blank" href="http://meanjs.org/generator.html">Yeoman Generator</a>
-				</li> -->
+				</li> >
         <li><a target="_blank" href="http://meanjs.org/modules.html">Modules</a>
         </li>
         <li><a target="_blank" href="http://meanjs.org/changelog.html">Changelog</a>
@@ -80,5 +83,5 @@
     </p>
   </div>
   <br>Enjoy &amp; Keep Us Updated,
-  <br>The MEAN.JS Team.
+  <br>The MEAN.JS Team.-->
 </section>
